Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-11077] SourceKit returned an error response - init() has no declaration location #53469

Closed
cltnschlosser opened this issue Jul 6, 2019 · 1 comment
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. found by stress tester Flag: An issue found by the SourceKit stress tester

Comments

@cltnschlosser
Copy link
Collaborator

Previous ID SR-11077
Radar None
Original Reporter @cltnschlosser
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Additional Detail from JIRA
Votes 0
Component/s Source Tooling
Labels Bug, FoundByStressTester
Assignee @cltnschlosser
Priority Medium

md5: 4c88c2a239d023c7587345ae8539a9e7

Issue Description:

/Library/Developer/Toolchains/swift-DEVELOPMENT-SNAPSHOT-2019-07-03-a.xctoolchain/usr/bin/sk-swiftc-wrapper /path/Test.swift
Detected unexpected failure: SourceKit returned an error response
 request: SemanticRefactoring (Local Rename) in /path/Test.swift at offset 168 with args: /path/Test.swift
 response: error response (Request Failed): <unknown>:0: error: value decl ''init()'' has no declaration location
-- begin file content --------
<unmodified>
-- end file content ----------
@cltnschlosser
Copy link
Collaborator Author

#26016

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. found by stress tester Flag: An issue found by the SourceKit stress tester
Projects
None yet
Development

No branches or pull requests

1 participant