[refactoring] Fix error when renaming nested type at constructor - init() has no declaration location Resolves SR-11077